feat(chat): added a attach source to chat feature
